add expense and income fragment

--- a/ExpenseTacker/app/src/main/res/drawable/selected_type_bg.xml
+++ b/ExpenseTacker/app/src/main/res/drawable/selected_type_bg.xml
@@ -8,6 +8,6 @@
     <corners android:radius="8dp"/>
 
     <solid
-        android:color="@color/white"/>
+        android:color="@color/monthly_view_color"/>
 
 </shape>
