--- a/ExpenseTacker/app/src/main/res/layout/fragment_transaction.xml
+++ b/ExpenseTacker/app/src/main/res/layout/fragment_transaction.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.fragments.TransactionFragment">
 
 
-    <LinearLayout
+   <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -103,7 +103,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:scrollbars="horizontal"
+        android:scrollbars="none"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
