--- a/ExpenseTacker/app/src/main/res/values/colors.xml
+++ b/ExpenseTacker/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="red">#FF0000</color>
     <color name="green">#2A5F17</color>
     <color name="monthly_view_color">#B2E97C</color>
+    <color name="activity_bg_color">#E6E3DC</color>
 </resources>
