--- a/ExpenseTacker/app/src/main/res/layout/day_view_layout.xml
+++ b/ExpenseTacker/app/src/main/res/layout/day_view_layout.xml
@@ -3,40 +3,34 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="4dp">
-<!--    android:background="@drawable/rectangle_bg">-->
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tv_day"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
-        android:text="1"
+        android:text=""
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_income"
+        android:id="@+id/tv_expense"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:text="1500"
-        android:textColor="@color/green"
+        android:textColor="@color/red"
+        android:textSize="11sp"
         app:layout_constraintStart_toStartOf="@+id/tv_day"
         app:layout_constraintTop_toBottomOf="@+id/tv_day" />
 
     <TextView
-        android:id="@+id/tv_expense"
+        android:id="@+id/tv_income"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
         android:layout_marginBottom="4dp"
-        android:text="870"
-        android:textColor="@color/red"
+        android:textColor="@color/green"
+        android:textSize="11sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/tv_day"
-        app:layout_constraintTop_toBottomOf="@+id/tv_income" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_expense" />
 </androidx.constraintlayout.widget.ConstraintLayout>
