--- a/ExpenseTacker/app/src/main/res/menu/activity_main_drawer.xml
+++ b/ExpenseTacker/app/src/main/res/menu/activity_main_drawer.xml
@@ -25,7 +25,7 @@
             android:title="@string/action_logout" />
         <item
             android:id="@+id/nav_month"
-            android:icon="@drawable/icon_logout"
-            android:title="Month" />
+            android:icon="@drawable/icon_calendar_month"
+            android:title="@string/monthly" />
     </group>
 </menu>
